OPHJOD-1310: Fix Sonar warnings